--- a/Frontend/src/Context/Popup.css
+++ b/Frontend/src/Context/Popup.css
@@ -3,7 +3,7 @@
     top: 0;
     left: 50%;
     transform: translateX(-50%);
-    background-color: #4caf50;
+    background-color: #d2330f;
     color: #fff;
     padding: 10px 20px;
     border-radius: 5px;
