--- a/Admin/src/Components/ListProduct/ListProduct.css
+++ b/Admin/src/Components/ListProduct/ListProduct.css
@@ -39,6 +39,10 @@
 .listproduct-remove-icon{
     cursor: pointer;
     margin: auto;
+    background: red;
+    color: white;
+    border-radius: 5px;
+    width: max-content;
 }
 
 .listproduct-allproducts{
