--- a/Frontend/src/Components/Footer/Footer.css
+++ b/Frontend/src/Components/Footer/Footer.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: relative;
     gap: 50px;
 
 }
@@ -11,6 +12,7 @@
 .footer-logo{
     display: flex;
     align-items: center;
+    position: relative;
     gap: 10px;
     margin-top: 95px;
 }
