--- a/Frontend/src/Components/NavBar.css
+++ b/Frontend/src/Components/NavBar.css
@@ -2,6 +2,7 @@
 .navbar{
     display: flex;
     justify-content: space-around;
+    background: rgb(204, 179, 179);
     padding: 16px;
     box-shadow: 0 1px 3px -2px black;
 }
