--- a/Frontend/src/Components/Footer/Footer.css
+++ b/Frontend/src/Components/Footer/Footer.css
@@ -27,8 +27,12 @@
     display: flex;
     list-style: none;
     gap: 50px;
-    color: #252525;
+    font-weight: 500;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: #761d1d;
     font-size: 20px;
+    text-decoration: none;
+    font-style: normal;
 }
 
 .footer-links li{
