--- a/Admin/src/Components/SideBar/SideBar.css
+++ b/Admin/src/Components/SideBar/SideBar.css
@@ -22,6 +22,10 @@
     cursor: pointer;
 }
 
+.sidebar-item p{
+     font-size: larger;
+}
+
 @media(max-width: 800px){
     .sidebar{
         padding: 30px 0px;
