--- a/Frontend/src/Components/NavBar.css
+++ b/Frontend/src/Components/NavBar.css
@@ -2,7 +2,7 @@
 .navbar{
     display: flex;
     justify-content: space-around;
-    background: rgb(185, 158, 155);
+    background:#fce3fe;
     padding: 16px;
     box-shadow: 0 1px 3px -2px black;
 }
@@ -24,7 +24,7 @@
     align-items: center;
     list-style: none;
     gap: 50px;
-    color: #626262;
+    color: #ffffff;
     font-size: 20px;
     font-weight: 500;
 }
@@ -45,16 +45,23 @@
     width: 80%;
     border-radius: 10px ;
     background: #FF4141;
+    transition: width 0.6s ease-in-out; 
+    opacity: 1;
 }
 
 .nav-login-cart{
     display: flex;
     align-items: center;
     gap: 45px;
+  
 
 }
+.nav-login-cart img{
+    height: 60px;
+    width: 50px;
+}
 
-.nav-login-cart button{
+/* .nav-login-cart button{
     width: 157px;
     border: 1px solid #7a7a7a;
     font-size: 20px;
@@ -65,22 +72,28 @@
     border-radius: 75px;
     height: 58px;
     background: #FF4141;
-}
+} */
 
-.nav-login-cart button:active{
+/* .nav-login-cart button:active{
     background: #f3f3f3;
+} */
+.div1{
+    border: none;
+}
+.div1 button{
+    border: none;
 }
 
 
 .nav-cart-count{
     width: 22px;
     cursor: pointer;
-    height: 22px;
+    height: 23px;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: -35px;
-    margin-left: -55px;
+    margin-left: -59px;
     border-radius: 11px;
     font-size: 14px;
     background: red;
@@ -183,4 +196,27 @@
         font-size: 12px;
     }
 } */
+
+/* Regular CSS equivalent */
+.custom-image {
+    width: 4rem; 
+    margin-bottom: 0.5rem; 
+    height: 3.3rem;
+    border-radius:50%; 
+    margin-top: 15px;
+  }
+
+  .combine{
+    display: flex;
+    gap: 59px;
+  }
+  
+  .menu{
+    font-weight: 800;
+    font-size: medium;
+    font-style: inherit;
+    color: #171717;
+   
+    text-transform: uppercase;
+  }
 
